--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Amin's Personal webPage</title>
+   <base href="https://kleai.github.io/cv/" target="_blank">
 </head>
 
 <body>
