--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
   <hr size="3" noshade>
   <h3><a href="C:\Users\AMINsd\Desktop\Web Development\HTML - Personal Web Site\hobbies.html">Hobbies</a>
     <a href="C:\Users\AMINsd\Desktop\Web Development\HTML - Personal Web Site\MyContactInfo.html">Contact Me</a>
+    <p><a href="/MyContactInfo.html">HTML base tag</a> - Notice that the link opens in a new window, even if it has no target="_blank" attribute. This is because the target attribute of the base element is set to "_blank".</p>
   </h3>
 </body>
 
