--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <h3><a href="C:\Users\AMINsd\Desktop\Web Development\HTML - Personal Web Site\hobbies.html">Hobbies</a>
     <a href="C:\Users\AMINsd\Desktop\Web Development\HTML - Personal Web Site\MyContactInfo.html"</a>
     <p>
-       <a href="MyContactInfo.html"> >Contact Me </a> 
+       <a href="MyContactInfo.html"> Contact Me </a> 
   </h3>
 </body>
 
