--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\AMINsd\Desktop\Web Development\HTML - Personal Web Site\rsz_1circle-cropped.png" alt="Peace Maker"></td>
+      <td><img src="rsz_1circle-cropped.png" alt="Peace Maker"></td>
       <td>
         <em>
           <h1><a href="https://www.linkedin.com/in/amin-sadeghi-71a4b8179/">M'Amin Sadeghi</a></h1>
